JEDIT 4.0 VERSION HISTORY

* Version 4.0pre3

+ Bug Fixes

- JEditTextArea now uses type-safe buffer property accessors, so there
  shouldn't be any more ClassCastExceptions
- Fixed stack overflow if attempting to use URL filesystem (to open an
  http:// URL, for instance)

* Version 4.0pre2

+ New Features

- MacOS plugin bundled (Kris Kopicki)
  - jEdit exits cleanly when Command+Q is pressed
  - Files created or associated with jEdit can now be opened from the
    Finder by double-clicking on them, or dragging them to the jEdit
    icon
  - jEdit is assigned as the creator of new files
- A few Alt-key shortcuts added for commonly-used commands so that you
  don't have to move your fingers all over the keyboard:
  - A+i, A+k: prev, next line
  - A+j, A+l: prev, next character
  - A+q, A+a: page up, page down
  - A+z, A+x: home, end
  - A+d: delete next character
- A new View->Docking menu; contains commands for closing the left, top,
  right and bottom docking areas (shortcuts: C+e 1,2,3,4)
- Narrowing re-implemented. This feature was present in jEdit 3.2 but
  was missing from 4.0pre1.

+ Enhancements

- Bracket matching improvements:
  - If the highlighted bracket is off screen, the text of the matching
    line is shown in the status bar. And here's the best part: if the
    matching line cosists of only a bracket and whitespace, the
    *previous* line is shown in the status bar instead
  - Clicking the scope indicator in the gutter moves the caret between
    the two matching brackets
  - Control-clicking the scope indicator or a bracket in the text area
    selects all text between the two matching brackets
- File system browser improvements:
  - Parent directories are now listed in a widget at the top of the
    file system browser
  - File->Recent Directories menu lists directories that were recently
    visted in the file system browser
  - File selection dialog boxes now have a status bar that shows the
    number of pending I/O requests